# vk-imgui-sdl3-rendering

./: .gitignore  CMakeLists.txt  CMakePresets.json  imgui.ini
assets/models/: BoxVertexColors.gltf
patches/: bsThread_pool.patch  vk_mem_alloc.patch
shaders/: frag.slang  vert.slang
src/: Logger.cppm  ModelLoader.cppm  SceneBuilder.cppm  TextureStore.cppm  TextureStore.cppm2  VulkanDevice.cppm  VulkanInstance.cppm  VulkanPipeline.cppm  VulkanWindow.cppm  app.cppm  extra.cppm  imgui.cppm  implementations.cpp  macros.hpp  main.cpp  memory_types.cppm  mesh.cppm  my_helper_impl.cppm  primitive_types.hpp  scene.cppm  texture.cppm  tinygltf_impl.cpp  tinygltf_module_wrapper.cppm  types.cppm  utils.cppm
